--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@fullpage/react-fullpage": "^0.1.40",
     "@react-three/drei": "^9.84.3",
-    "@react-three/fiber": "^8.14.2",
+    "@react-three/fiber": "^8.15.11",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/three": "^0.158.2",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "framer-motion": "^10.16.5",
     "jquery": "^3.7.1",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
